--- a/Nelsonfox/Day07_01/AndroidManifest.xml
+++ b/Nelsonfox/Day07_01/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.eoe.hello_android"
+    package="com.ityw.day07_01"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.eoe.hello_android.MainActivity"
+            android:name="com.ityw.day07_01.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
